Some mod in nav

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,19 @@ wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      var prevScrollpos = window.pageYOffset;
+      window.onscroll = function () {
+        var currentScrollPos = window.pageYOffset;
+        if (prevScrollpos > currentScrollPos) {
+          document.getElementsByClassName("nav-container")[0].style.top = "0";
+        } else {
+          document.getElementsByClassName("nav-container")[0].style.top =
+            "-56.5px";
+        }
+        prevScrollpos = currentScrollPos;
+      };
+    </script>
     <script
       src="https://kit.fontawesome.com/833a7c1b76.js"
       crossorigin="anonymous"
